_sass/global/global.scss
@import "card-dropshadows";

@import "../variables";

body {
  background-color: $seashell;
}

.btn-primary {
  color: white!important;
  background-color: $theme-primary!important;
  border-color: $theme-primary!important;
}

.btn-white {
  color: $theme-primary!important;
  background-color: white!important;
  border-color: white!important;
}

